quic/s2n-quic-core/src/state/snapshots/s2n_quic_core__state__tests__lr_dot_test.snap
---
source: quic/s2n-quic-core/src/state/tests.rs
expression: "Lr::dot()"
---
digraph {
  label = "s2n_quic_core::state::tests::Lr";
  Init;
  Left;
  LeftLeft;
  LeftRight;
  Right;
  RightLeft;
  RightRight;
  Init -> Left [label = "on_left"];
  Left -> LeftLeft [label = "on_left"];
  Right -> RightLeft [label = "on_left"];
  Init -> Right [label = "on_right"];
  Left -> LeftRight [label = "on_right"];
  Right -> RightRight [label = "on_right"];
}
